# lore-scribe

./: .gitignore  README.md  app.py  pyproject.toml  setup-python-env.ps1
lore_scribe/: main.py
lore_scribe/assets/: theme.py
lore_scribe/services/: audio_validation.py  task_runner.py  transcription.py
lore_scribe/widgets/: transcript_viewer.py
lore_scribe/windows/: main_window.py
